--- a/template/package.json
+++ b/template/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "vue": "^2.5.17"
   },
   "devDependencies": {
