--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
   },
   "dependencies": {
-    "lodash": "^4.17.5",
+    "lodash": ">=4.17.11",
     "postcss-filter-plugins": "^2.0.3",
     "uniqid": "^5.0.3",
     "vue": "^2.5.17"
@@ -22,7 +22,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
+    "eslint": "^5.14.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^3.14.0",
     "eslint-webpack": "^3.12.2",
@@ -35,6 +35,6 @@
     "vue-loader": "^13.7.3",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.3"
+    "webpack-dev-server": "^3.1.14"
   }
 }
